--- a/src/Profile/appsettings.json
+++ b/src/Profile/appsettings.json
@@ -3,6 +3,7 @@
     "BridgeApiEndpoint": "https://at22.altinn.cloud/sblbridge/profile/api/",
     "OpenIdWellKnownEndpoint": "http://localhost:5040/authentication/api/v1/openid/",
     "JwtCookieName": "AltinnStudioRuntime",
-    "ProfileCacheLifetimeSeconds":  600
+    "ProfileCacheLifetimeSeconds":  600,
+    "rest":true
   }
 }
