--- a/.github/workflows/container-scan.yml
+++ b/.github/workflows/container-scan.yml
@@ -22,6 +22,8 @@ jobs:
     - name: Build the Docker image
       run: docker build . --tag altinn-profile:${{github.sha}}
 
-    - uses: Azure/container-scan@v0
+    - uses: Azure/container-scan@v0.1
       with:
         image-name: altinn-profile:${{ github.sha }}
+      env:
+        DOCKLE_HOST: "unix:///var/run/docker.sock"
