--- a/.github/workflows/build-and-analyze.yml
+++ b/.github/workflows/build-and-analyze.yml
@@ -35,7 +35,7 @@ jobs:
       - name: Set up JDK 11
         uses: actions/setup-java@v1
         with:
-          distribution: 'windows'
+          distribution: 'microsoft'
           java-version: 17
       - uses: actions/checkout@v2
         with:
