--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -4,17 +4,16 @@ updates:
   - directory: "src/Profile"
     package-ecosystem: "nuget"
     schedule:
-      interval: "weekly"
-      day: "thursday"
+      interval: "daily"
+      ##day: "thursday"
       time: "07:00"
       timezone: "Europe/Oslo"
-
 ## Test
   - directory: "test/Altinn.Platform.Profile.Tests"
     package-ecosystem: "nuget"
     schedule:
-      interval: "weekly"
-      day: "thursday"
+      interval: "daily"
+      ##day: "thursday"
       time: "07:00"
       timezone: "Europe/Oslo"
       
@@ -22,8 +21,8 @@ updates:
   - directory: "/"
     package-ecosystem: "docker"
     schedule:
-      interval: "weekly"
-      day: "thursday"
+      interval: "daily"
+      ##day: "thursday"
       time: "07:00"
       timezone: "Europe/Oslo"
      
@@ -31,8 +30,8 @@ updates:
   - package-ecosystem: "github-actions"
     directory: "/"
     schedule:
-      interval: "weekly"
-      day: "thursday"
+      interval: "daily"
+      ##day: "thursday"
       time: "07:00"
       timezone: "Europe/Oslo"
     open-pull-requests-limit: 10
