--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -29,11 +29,12 @@ jobs:
 
     steps:
     - name: Checkout repository
-      uses: actions/checkout@v2
+      uses: actions/checkout@v3
     - name: Setup .NET 6.0.* SDK
-      uses: actions/setup-dotnet@v1.9.0
+      uses: actions/setup-dotnet@v2
       with:
-        dotnet-version: '6.0.*'
+        dotnet-version: |
+          6.0.x
     - name: Initialize CodeQL
       uses: github/codeql-action/init@v2
       with:
