Update schedule for dependabot

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -4,16 +4,16 @@ updates:
   - directory: "src/Profile"
     package-ecosystem: "nuget"
     schedule:
-      interval: "daily"
-      ##day: "thursday"
+      interval: "weekly"
+      day: "thursday"
       time: "07:00"
       timezone: "Europe/Oslo"
 ## Test
   - directory: "test/Altinn.Platform.Profile.Tests"
     package-ecosystem: "nuget"
     schedule:
-      interval: "daily"
-      ##day: "thursday"
+      interval: "weekly"
+      day: "thursday"
       time: "07:00"
       timezone: "Europe/Oslo"
       
@@ -21,8 +21,8 @@ updates:
   - directory: "/"
     package-ecosystem: "docker"
     schedule:
-      interval: "daily"
-      ##day: "thursday"
+      interval: "weekly"
+      day: "thursday"
       time: "07:00"
       timezone: "Europe/Oslo"
      
@@ -30,8 +30,8 @@ updates:
   - package-ecosystem: "github-actions"
     directory: "/"
     schedule:
-      interval: "daily"
-      ##day: "thursday"
+      interval: "weekly"
+      day: "thursday"
       time: "07:00"
       timezone: "Europe/Oslo"
     open-pull-requests-limit: 10
