--- a/.github/workflows/build-and-analyze.yml
+++ b/.github/workflows/build-and-analyze.yml
@@ -9,7 +9,7 @@ on:
 jobs:
   build-and-test:
     name: Build and Test
-    if: ((github.event_name == 'pull_request' && github.event.pull_request.head.repo.fork == false) || github.event_name == 'push') && github.repository_owner == 'Altinn' && github.actor != 'dependabot[bot]' 
+    if: ((github.event_name == 'pull_request' && github.event.pull_request.head.repo.fork == false) || github.event_name == 'push') && github.repository_owner == 'Altinn' && github.actor != 'dependabot[bot]'
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
@@ -20,10 +20,10 @@ jobs:
             6.0.x
       - name: Build & Test
         run: |
-           dotnet build Altinn.Platform.Profile.sln -v m
-           dotnet test Altinn.Platform.Profile.sln -v m
+           dotnet build Altinn.Profile.sln -v m
+           dotnet test Altinn.Profile.sln -v m
   analyze:
-    if: ((github.event_name == 'pull_request' && github.event.pull_request.head.repo.fork == false) || github.event_name == 'push') && github.repository_owner == 'Altinn' && github.actor != 'dependabot[bot]' 
+    if: ((github.event_name == 'pull_request' && github.event.pull_request.head.repo.fork == false) || github.event_name == 'push') && github.repository_owner == 'Altinn' && github.actor != 'dependabot[bot]'
     name: Analyze
     runs-on: windows-latest
     steps:
@@ -67,8 +67,8 @@ jobs:
         run: |
           .\.sonar\scanner\dotnet-sonarscanner begin /k:"Altinn_altinn-profile" /o:"altinn" /d:sonar.login="${{ secrets.SONAR_TOKEN }}" /d:sonar.host.url="https://sonarcloud.io" /d:sonar.cs.vstest.reportsPaths="**/*.trx" /d:sonar.cs.opencover.reportsPaths="**/coverage.opencover.xml"
 
-          dotnet build Altinn.Platform.Profile.sln
-          dotnet test Altinn.Platform.Profile.sln `
+          dotnet build Altinn.Profile.sln
+          dotnet test Altinn.Profile.sln `
           --no-build `
           --results-directory TestResults/ `
           --collect:"XPlat Code Coverage" `
