refactored to new project structure

--- a/src/Altinn.Profile/appsettings.json
+++ b/src/Altinn.Profile/appsettings.json
@@ -1,8 +1,12 @@
 {
   "GeneralSettings": {
-    "BridgeApiEndpoint": "https://at22.altinn.cloud/sblbridge/profile/api/",
     "OpenIdWellKnownEndpoint": "http://localhost:5040/authentication/api/v1/openid/",
-    "JwtCookieName": "AltinnStudioRuntime",
-    "ProfileCacheLifetimeSeconds":  600
+    "JwtCookieName": "AltinnStudioRuntime"
+  },
+  "SblBridgeSettings": {
+    "ApiProfileEndpoint": "https://at22.altinn.cloud/sblbridge/profile/api/"
+  },
+  "CoreSettings": {
+    "ProfileCacheLifetimeSeconds": 600
   }
 }
