--- a/.github/workflows/build-and-analyze.yml
+++ b/.github/workflows/build-and-analyze.yml
@@ -48,8 +48,9 @@ jobs:
 
           dotnet test Altinn.Profile.sln \
           -v q \
-          --results-directory TestResults/ \
           --collect:"XPlat Code Coverage" \
+          --results-directory TestResults/ \
+          --logger "trx;" \
           --configuration release \
           -- DataCollectionRunSettings.DataCollectors.DataCollector.Configuration.Format=opencover
       - name: Complete sonar analysis
