--- a/src/Altinn.Profile/Properties/launchSettings.json
+++ b/src/Altinn.Profile/Properties/launchSettings.json
@@ -1,26 +1,10 @@
 {
   "$schema": "http://json.schemastore.org/launchsettings.json",
-  "iisSettings": {
-    "windowsAuthentication": false, 
-    "anonymousAuthentication": true, 
-    "iisExpress": {
-      "applicationUrl": "http://localhost:58874",
-      "sslPort": 44339
-    }
-  },
   "profiles": {
-    "IIS Express": {
-      "commandName": "IISExpress",
-      "launchBrowser": true,
-      "launchUrl": "profile/swagger",
-      "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
-      }
-    },
     "Altinn.Profile": {
       "commandName": "Project",
       "launchBrowser": true,
-      "launchUrl": "profile/swagger",
+      "launchUrl": "swagger",
       "applicationUrl": "http://localhost:5030",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development",
