--- a/src/Altinn.Profile/efpt.config.json
+++ b/src/Altinn.Profile/efpt.config.json
@@ -1,6 +1,6 @@
 ﻿{
   "CodeGenerationMode": 4,
-  "ContextClassName": "ProfiledbContext",
+  "ContextClassName": "ProfileDbContext",
   "ContextNamespace": null,
   "FilterSchemas": false,
   "IncludeConnectionString": false,
