--- a/src/Altinn.Profile/appsettings.json
+++ b/src/Altinn.Profile/appsettings.json
@@ -8,5 +8,10 @@
   },
   "CoreSettings": {
     "ProfileCacheLifetimeSeconds": 600
+  },
+  "PostgreSqlSettings": {
+    "ProfileDbAdminUserName": "from keyvault",
+    "ProfileDbAdminPassword": "from keyvault",
+    "ProfileDbConnectionString": "Host=localhost;Port=5432;Database=profiledb;Username={0};Password={1};"
   }
 }
