--- a/src/Altinn.Profile.Integrations/Altinn.Profile.Integrations.csproj
+++ b/src/Altinn.Profile.Integrations/Altinn.Profile.Integrations.csproj
@@ -28,5 +28,9 @@
       <Link>stylecop.json</Link>
     </AdditionalFiles>
   </ItemGroup>
+  
+  <ItemGroup>
+    <Folder Include="ChangesLog\" />
+  </ItemGroup>
 
 </Project>
