Move the interface IPersonContactPreferencesSnapshot to a new namespace

--- a/src/Altinn.Profile/appsettings.json
+++ b/src/Altinn.Profile/appsettings.json
@@ -10,8 +10,8 @@
     "ProfileCacheLifetimeSeconds": 600
   },
   "ContactAndReservationSettings": {
-    "ContactDetailsChangesEndpoint": "https://test.kontaktregisteret.no/rest/v2/krr/hentEndringer",
-    "Maskinporten": {
+    "ChangesLogEndpoint": "https://test.kontaktregisteret.no/rest/v2/krr/hentEndringer",
+    "MaskinportenSettings": {
       "Environment": "test",
       "ClientId": "4382490c-a95d-4d53-9406-8a436d550703",
       "Scope": "krr:global/digitalpost.read krr:global/kontaktinformasjon.read krr:global/hentendring.read",
