--- a/src/Altinn.Profile/appsettings.Development.json
+++ b/src/Altinn.Profile/appsettings.Development.json
@@ -1,4 +1,7 @@
 {
+  "PostgreSqlSettings": {
+    "MigrationScriptPath": "Altinn.Profile.Integrations/Migration"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Debug",
