--- a/src/Altinn.Profile/appsettings.json
+++ b/src/Altinn.Profile/appsettings.json
@@ -10,8 +10,11 @@
     "ProfileCacheLifetimeSeconds": 600
   },
   "PostgreSqlSettings": {
-    "ProfileDbAdminUserName": "from keyvault",
-    "ProfileDbAdminPassword": "from keyvault",
-    "ProfileDbConnectionString": "Host=localhost;Port=5432;Database=profiledb;Username={0};Password={1};"
+    "MigrationScriptPath": "Migration",
+    "AdminConnectionString": "Host=localhost;Port=5432;Username=platform_profile_admin;Password={0};Database=profiledb",
+    "ConnectionString": "Host=localhost;Port=5432;Username=platform_profile;Password={0};Database=profiledb",
+    "ProfileDbAdminPwd": "Password",
+    "ProfileDbPwd": "Password",
+    "EnableDBConnection": true
   }
 }
