Add postgresql to build and analyze

--- a/src/Altinn.Profile/appsettings.Development.json
+++ b/src/Altinn.Profile/appsettings.Development.json
@@ -1,6 +1,6 @@
 {
   "PostgreSqlSettings": {
-    "MigrationScriptPath": "Altinn.Profile.Integrations/Migration"
+    "MigrationScriptPath": "../Altinn.Profile.Integrations/Migration"
   },
   "Logging": {
     "LogLevel": {
