--- a/.github/workflows/build-and-analyze.yml
+++ b/.github/workflows/build-and-analyze.yml
@@ -14,6 +14,20 @@ jobs:
     name: Build, test & analyze
     if: ((github.event_name == 'pull_request' && github.event.pull_request.head.repo.fork == false) || github.event_name == 'push') && github.repository_owner == 'Altinn'
     runs-on: ubuntu-latest
+    services:
+     postgres:
+       image: postgres:16
+       env:
+         POSTGRES_USER: platform_profile_admin
+         POSTGRES_PASSWORD: Password
+         POSTGRES_DB: profiledb
+       options: >-
+         --health-cmd pg_isready
+         --health-interval 10s
+         --health-timeout 5s
+         --health-retries 5
+       ports:
+         - 5432:5432
     steps:
       - name: Setup .NET
         uses: actions/setup-dotnet@v4
