Add dummy MaskinportenSettings

--- a/src/Altinn.Profile/appsettings.json
+++ b/src/Altinn.Profile/appsettings.json
@@ -18,6 +18,9 @@
     "EnableDBConnection": true
   },
   "ContactAndReservationSettings": {
-    "ChangesLogEndpoint": "https://test.kontaktregisteret.no/rest/v2/krr/hentEndringer"
+    "ChangesLogEndpoint": "https://test.kontaktregisteret.no/rest/v2/krr/hentEndringer",
+    "MaskinportenSettings": {
+      "Environment": "test"
+    }
   }
 }
