--- a/.github/workflows/build-and-analyze.yml
+++ b/.github/workflows/build-and-analyze.yml
@@ -42,6 +42,13 @@ jobs:
       - uses: actions/checkout@v4
         with:
           fetch-depth: 0  # Shallow clones should be disabled for a better relevancy of analysis
+      - name: Setup PostgreSQL
+        run: |
+            chmod +x dbsetup.sh
+            ./dbsetup.sh
+      - name: Restart database to enable config changes
+        run: |
+          docker restart $(docker ps -q)
       - name: Cache SonarCloud packages
         uses: actions/cache@v4
         with:
