Add MaskinportenSettings to config

--- a/src/Altinn.Profile/appsettings.json
+++ b/src/Altinn.Profile/appsettings.json
@@ -20,7 +20,10 @@
   "ContactAndReservationSettings": {
     "ChangesLogEndpoint": "https://test.kontaktregisteret.no/rest/v2/krr/hentEndringer",
     "MaskinportenSettings": {
-      "Environment": "test"
+      "Environment": "test",
+      "Scope": "krr:global/digitalpost.read krr:global/kontaktinformasjon.read krr:global/hentendring.read",
+      "ClientId": "value injected as secret",
+      "EncodedJwk": "value injected as secret"
     }
   }
 }
