--- a/.github/workflows/build-and-analyze.yml
+++ b/.github/workflows/build-and-analyze.yml
@@ -14,6 +14,20 @@ jobs:
     name: Build, test & analyze
     if: ((github.event_name == 'pull_request' && github.event.pull_request.head.repo.fork == false) || github.event_name == 'push') && github.repository_owner == 'Altinn'
     runs-on: ubuntu-latest
+    services:
+     postgres:
+       image: postgres:16
+       env:
+         POSTGRES_USER: platform_profile_admin
+         POSTGRES_PASSWORD: Password
+         POSTGRES_DB: profiledb
+       options: >-
+         --health-cmd pg_isready
+         --health-interval 10s
+         --health-timeout 5s
+         --health-retries 5
+       ports:
+         - 5432:5432
     steps:
       - name: Setup .NET
         uses: actions/setup-dotnet@v4
@@ -28,6 +42,13 @@ jobs:
       - uses: actions/checkout@v4
         with:
           fetch-depth: 0  # Shallow clones should be disabled for a better relevancy of analysis
+      - name: Setup PostgreSQL
+        run: |
+            chmod +x dbsetup.sh
+            ./dbsetup.sh
+      - name: Restart database to enable config changes
+        run: |
+          docker restart $(docker ps -q)
       - name: Cache SonarCloud packages
         uses: actions/cache@v4
         with:
