--- a/src/Altinn.Profile/appsettings.json
+++ b/src/Altinn.Profile/appsettings.json
@@ -16,5 +16,14 @@
     "ProfileDbAdminPwd": "Password",
     "ProfileDbPwd": "Password",
     "EnableDBConnection": true
+  },
+  "ContactAndReservationSettings": {
+    "ChangesLogEndpoint": "https://test.kontaktregisteret.no/rest/v2/krr/hentEndringer",
+    "MaskinportenSettings": {
+      "Environment": "test",
+      "Scope": "krr:global/digitalpost.read krr:global/kontaktinformasjon.read krr:global/hentendring.read",
+      "ClientId": "value injected as secret",
+      "EncodedJwk": "value injected as secret"
+    }
   }
 }
