Add new feature-flag field in CoreSettings

--- a/src/Altinn.Profile/appsettings.json
+++ b/src/Altinn.Profile/appsettings.json
@@ -1,12 +1,14 @@
 {
   "GeneralSettings": {
     "OpenIdWellKnownEndpoint": "http://localhost:5040/authentication/api/v1/openid/",
-    "JwtCookieName": "AltinnStudioRuntime"
+    "JwtCookieName": "AltinnStudioRuntime",
+    "EnableLocalKrrFetch":false
   },
   "SblBridgeSettings": {
     "ApiProfileEndpoint": "https://at24.altinn.cloud/sblbridge/profile/api/"
   },
   "CoreSettings": {
+    "EnableLocalKrrFetch": true,
     "ProfileCacheLifetimeSeconds": 600
   },
   "PostgreSqlSettings": {
