Set default "false", and remove an incorrectly placed duplicate

--- a/src/Altinn.Profile/appsettings.json
+++ b/src/Altinn.Profile/appsettings.json
@@ -1,14 +1,13 @@
 {
   "GeneralSettings": {
     "OpenIdWellKnownEndpoint": "http://localhost:5040/authentication/api/v1/openid/",
-    "JwtCookieName": "AltinnStudioRuntime",
-    "EnableLocalKrrFetch":false
+    "JwtCookieName": "AltinnStudioRuntime"
   },
   "SblBridgeSettings": {
     "ApiProfileEndpoint": "https://at24.altinn.cloud/sblbridge/profile/api/"
   },
   "CoreSettings": {
-    "EnableLocalKrrFetch": true,
+    "EnableLocalKrrFetch": false,
     "ProfileCacheLifetimeSeconds": 600
   },
   "PostgreSqlSettings": {
