Use feature-flag to conditionally fetch from SBL Bridge vs local DB for users/contactpoints (#238)
* Whitespace formatting

* Fix typo in comment

* Add ..Service suffix to IUserContactPoints

* Give parameter a more appropriate name

* Remove Controller, Retriever, and Test for PersonContactDetails

* Add new feature-flag field in CoreSettings

* Create new automated test for UserContactPointService (will fail for now)

* Remove unused using statement

* Set default "false", and remove an incorrectly placed duplicate

* Delete classes that will no longer be used

* Replace non-working use of Result with try-catch

* Remove unncessesary usings

* Remove unused usings and fields

* Make AutoMapper set false for IsReserved if Person.Reservation is null

* bool? -> bool for IsReserved

* Set lifetime for Core services Singleton -> Scoped

* Create new IPersonService interface (w/o use of Result struct) in Core project

* A meaty commit

* Refine summary of new interfaces

* Drop try-catch in controller, as this functionality will be covered by the ErrorController

* Make potentially null-valued properties nullable

* Remove unneeded question mark when accessing preferencesForContacts

* Fix typo

* Change predicate on UserId from != 0 to != null

* Change expected value of NationalIdentityNumber from string.empty => null, to accommodate its new nullability in UserContactPoints

* Remove logger (no longer used)

* Fix missing space

* Remove unnecessary using statement

--- a/src/Altinn.Profile/appsettings.json
+++ b/src/Altinn.Profile/appsettings.json
@@ -7,6 +7,7 @@
     "ApiProfileEndpoint": "https://at24.altinn.cloud/sblbridge/profile/api/"
   },
   "CoreSettings": {
+    "EnableLocalKrrFetch": false,
     "ProfileCacheLifetimeSeconds": 600
   },
   "PostgreSqlSettings": {
