--- a/.github/workflows/build-and-analyze.yml
+++ b/.github/workflows/build-and-analyze.yml
@@ -13,7 +13,7 @@ jobs:
   build-test-analyze:
     name: Build, test & analyze
     if: ((github.event_name == 'pull_request' && github.event.pull_request.head.repo.fork == false) || github.event_name == 'push') && github.repository_owner == 'Altinn'
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-24.04
     services:
      postgres:
        image: postgres:16
