First draft of kof-sync job

--- a/src/Altinn.Profile/appsettings.json
+++ b/src/Altinn.Profile/appsettings.json
@@ -26,5 +26,15 @@
       "ClientId": "value injected as secret",
       "EncodedJwk": "value injected as secret"
     }
+  },
+  "OfficalAddressRegisterSettings": {
+    "ChangesLogEndpoint": "https://kof-sync.brreg.no/varslingsadresser/fragments/json/v1",
+    "PageSize":  10000,
+    "MaskinportenSettings": {
+      "Environment": "test",
+      "Scope": "krr:global/digitalpost.read krr:global/kontaktinformasjon.read krr:global/hentendring.read",
+      "ClientId": "value injected as secret",
+      "EncodedJwk": "value injected as secret"
+    }
   }
 }
