Rename to remove references to "official"

--- a/src/Altinn.Profile/appsettings.json
+++ b/src/Altinn.Profile/appsettings.json
@@ -27,12 +27,12 @@
       "EncodedJwk": "value injected as secret"
     }
   },
-  "OfficalAddressRegisterSettings": {
+  "OrganizationNotificationAddressSettings": {
     "ChangesLogEndpoint": "https://kof-sync.brreg.no/varslingsadresser/fragments/json/v1",
-    "PageSize":  10000,
+    "PageSize": 10000,
     "MaskinportenSettings": {
       "Environment": "test",
-      "Scope": "krr:global/digitalpost.read krr:global/kontaktinformasjon.read krr:global/hentendring.read",
+      "Scope": "",
       "ClientId": "value injected as secret",
       "EncodedJwk": "value injected as secret"
     }
