--- a/src/Altinn.Profile/appsettings.json
+++ b/src/Altinn.Profile/appsettings.json
@@ -28,7 +28,7 @@
     }
   },
   "OrganizationNotificationAddressSettings": {
-    "ChangesLogEndpoint": "https://kof-sync.st1.brreg.no/",
+    "ChangesLogEndpoint": "https://kof-sync.st1.brreg.no/varslingsadresser/fragments/json/v1",
     "PageSize": 10000,
     "MaskinportenSettings": {
       "Environment": "test",
