Feature/kof sync (#307)
* First draft of kof-sync job

* Add deserialization of content

* Add interface for repository layer

* Add tests

* More refactoring and tests

* Rename to remove references to "official"

* Update more tests

* Remove typo

* Suggestions for code comment improvements (#313)

* Modifying some code comments

* Remove nullable directive (marked as redundant by the IDE)

* Updates from code review

* Update more test names

* Restructure tests

* Clean docs

* Fix broken code

* Update to file based namespace declaration

* Remove explicit argumentNullException for getting Content of adr

* Update doc

* Return null if no content

* Update tests with elegatingHandlerStub

* Update tests

* Update time format

* Add test url for sync

* with path

* Change sync metadata to store date of last update of changed address

* Use index instead of last()

* Add null check of kof-sync url

* Refactor null check on endpoint url

---------

Co-authored-by: Hallgeir Garnes-Gutvik <hallgeir.garnes-gutvik@digdir.no>

--- a/src/Altinn.Profile/appsettings.json
+++ b/src/Altinn.Profile/appsettings.json
@@ -26,5 +26,15 @@
       "ClientId": "value injected as secret",
       "EncodedJwk": "value injected as secret"
     }
+  },
+  "OrganizationNotificationAddressSettings": {
+    "ChangesLogEndpoint": "https://kof-sync.st1.brreg.no/varslingsadresser/fragments/json/v1",
+    "PageSize": 10000,
+    "MaskinportenSettings": {
+      "Environment": "test",
+      "Scope": "",
+      "ClientId": "value injected as secret",
+      "EncodedJwk": "value injected as secret"
+    }
   }
 }
