Add trigger endpoint for ovv

--- a/src/Altinn.Profile/appsettings.json
+++ b/src/Altinn.Profile/appsettings.json
@@ -29,7 +29,7 @@
   },
   "OrganizationNotificationAddressSettings": {
     "ChangesLogEndpoint": "https://kof-sync.st1.brreg.no/varslingsadresser/fragments/json/v1",
-    "PageSize": 10000,
+    "ChangesLogPageSize": 10000,
     "MaskinportenSettings": {
       "Environment": "test",
       "Scope": "",
