--- a/src/Altinn.Profile/appsettings.Staging.json
+++ b/src/Altinn.Profile/appsettings.Staging.json
@@ -4,6 +4,11 @@
       "Default": "Debug",
       "System": "Information",
       "Microsoft": "Information"
+    },
+    "OpenTelemetry": {
+      "LogLevel": {
+        "Microsoft.AspNetCore": "Warning"
+      }
     }
   }
 }
