Undo changes to appsettings

--- a/src/Altinn.Profile/appsettings.json
+++ b/src/Altinn.Profile/appsettings.json
@@ -1,7 +1,7 @@
 {
   "GeneralSettings": {
-    "OpenIdWellKnownEndpoint": "https://platform.at22.altinn.cloud/authentication/api/v1/openid/",
-    // "OpenIdWellKnownEndpoint": "http://localhost:5040/authentication/api/v1/openid/",
+    //"OpenIdWellKnownEndpoint": "https://platform.at22.altinn.cloud/authentication/api/v1/openid/",
+    "OpenIdWellKnownEndpoint": "http://localhost:5040/authentication/api/v1/openid/",
     "JwtCookieName": "AltinnStudioRuntime"
   },
   "SblBridgeSettings": {
@@ -29,8 +29,7 @@
     }
   },
   "OrganizationNotificationAddressSettings": {
-    //"UpdateEndpoint": "https://kof-reception.ppe.brreg.no",
-    "UpdateEndpoint": "http://localhost:3000",
+    "UpdateEndpoint": "https://kof-reception.ppe.brreg.no",
     "ChangesLogEndpoint": "https://kof-sync.ppe.brreg.no/varslingsadresser/fragments/json/v1",
     "ChangesLogPageSize": 5000,
     "MaskinportenSettings": {
