Add Notification client

--- a/src/Altinn.Profile/appsettings.json
+++ b/src/Altinn.Profile/appsettings.json
@@ -44,5 +44,8 @@
   },
   "RegisterSettings": {
     "ApiRegisterEndpoint": "http://localhost:5020/register/api/"
+  },
+  "NotificationsSettings": {
+    "ApiNotificationsEndpoint": "http://localhost:5090/notifications/api/"
   }
 }
