--- a/.github/workflows/use-case-ATX.yaml
+++ b/.github/workflows/use-case-ATX.yaml
@@ -22,12 +22,12 @@ jobs:
         uses: grafana/k6-action@e4714b734f2b0afaabeb7b4a69142745548ab9ec # v0.3.1
         with:
           filename: test/k6/src/tests/favorites.js
-          flags: -e env=${{ vars.ENV }} -e tokenGeneratorUserName=${{ secrets.TOKENGENERATOR_USERNAME }} -e tokenGeneratorUserPwd=${{ secrets.TOKENGENERATOR_USERPASSWORD }} -e userID=${{ secrets.USERID }} -e partyId=${{ secrets.PARTYID }} -e pid=${{ secrets.PID }} -e partyUuid=b${{ secrets.PARTYUUID }}
+          flags: -e env=${{ vars.ENV }} -e tokenGeneratorUserName=${{ secrets.TOKENGENERATOR_USERNAME }} -e tokenGeneratorUserPwd=${{ secrets.TOKENGENERATOR_USERPASSWORD }} -e userID=${{ secrets.USERID }} -e partyId=${{ secrets.PARTYID }} -e pid=${{ secrets.PID }} -e partyUuid=${{ secrets.PARTYUUID }}
       - name: Run notification settings use case tests
         uses: grafana/k6-action@e4714b734f2b0afaabeb7b4a69142745548ab9ec # v0.3.1
         with:
           filename: test/k6/src/tests/notification-settings.js
-          flags: -e env=${{ vars.ENV }} -e tokenGeneratorUserName=${{ secrets.TOKENGENERATOR_USERNAME }} -e tokenGeneratorUserPwd=${{ secrets.TOKENGENERATOR_USERPASSWORD }} -e userID=${{ secrets.USERID }} -e partyId=${{ secrets.PARTYID }} -e pid=${{ secrets.PID }} -e partyUuid=b${{ secrets.PARTYUUID }}
+          flags: -e env=${{ vars.ENV }} -e tokenGeneratorUserName=${{ secrets.TOKENGENERATOR_USERNAME }} -e tokenGeneratorUserPwd=${{ secrets.TOKENGENERATOR_USERPASSWORD }} -e userID=${{ secrets.USERID }} -e partyId=${{ secrets.PARTYID }} -e pid=${{ secrets.PID }} -e partyUuid=${{ secrets.PARTYUUID }}
       - name: Run org notification addresses use case tests
         uses: grafana/k6-action@e4714b734f2b0afaabeb7b4a69142745548ab9ec # v0.3.1
         with:
