Suggested by Claude

--- a/src/Altinn.Profile/appsettings.json
+++ b/src/Altinn.Profile/appsettings.json
@@ -13,7 +13,8 @@
   "PostgreSqlSettings": {
     "MigrationScriptPath": "Migration",
     "AdminConnectionString": "Host=localhost;Port=5432;Username=platform_profile_admin;Password={0};Database=profiledb;Pooling=false",
-    "ConnectionString": "Host=localhost;Port=5432;Username=platform_profile;Password={0};Database=profiledb;Maximum Pool Size=4",
+    "ConnectionString": "Host=localhost;Port=5432;Username=platform_profile;Password={0};Database=profiledb;Pooling=true;Maximum Pool Size=20;Minimum Pool Size=5;Connection Idle Lifetime=600;Command Timeout=30",
+    "WolverineConnectionString": "Host=localhost;Port=5432;Username=platform_profile;Password={0};Database=profiledb;Pooling=true;Maximum Pool Size=15;Minimum Pool Size=3;Connection Idle Lifetime=600;Command Timeout=30;Application Name=WolverineMessageStore",
     "ProfileDbAdminPwd": "Password",
     "ProfileDbPwd": "Password",
     "EnableDBConnection": true
