Add feature flag to update a2

--- a/src/Altinn.Profile/appsettings.json
+++ b/src/Altinn.Profile/appsettings.json
@@ -4,7 +4,8 @@
     "JwtCookieName": "AltinnStudioRuntime"
   },
   "SblBridgeSettings": {
-    "ApiProfileEndpoint": "https://at24.altinn.cloud/sblbridge/profile/api/"
+    "ApiProfileEndpoint": "https://at23.altinn.cloud/sblbridge/profile/api/",
+    "UpdateA2":  true
   },
   "CoreSettings": {
     "EnableLocalKrrFetch": false,
