Undo changes to appsettings

--- a/src/Altinn.Profile/appsettings.json
+++ b/src/Altinn.Profile/appsettings.json
@@ -4,7 +4,7 @@
     "JwtCookieName": "AltinnStudioRuntime"
   },
   "SblBridgeSettings": {
-    "ApiProfileEndpoint": "http://localhost:3000", //"https://at23.altinn.cloud/sblbridge/profile/api/",
+    "ApiProfileEndpoint": "https://at23.altinn.cloud/sblbridge/profile/api/",
     "UpdateA2": true
   },
   "CoreSettings": {
