--- a/src/Altinn.Profile/appsettings.json
+++ b/src/Altinn.Profile/appsettings.json
@@ -5,7 +5,7 @@
   },
   "SblBridgeSettings": {
     "ApiProfileEndpoint": "https://at23.altinn.cloud/sblbridge/profile/api/",
-    "UpdateA2": true
+    "UpdateA2": false
   },
   "CoreSettings": {
     "EnableLocalKrrFetch": false,
