Move stetings to apsettings

--- a/src/Altinn.Profile/appsettings.json
+++ b/src/Altinn.Profile/appsettings.json
@@ -37,6 +37,13 @@
       "Scope": "",
       "ClientId": "value injected as secret",
       "EncodedJwk": "value injected as secret"
+    },
+    "TestData": {
+      "OrganizationNumber": "810889802",
+      "EmailAddress": "example",
+      "EmailDomain": "digdir.no",
+      "PhoneNumber": "99999999",
+      "PhoneNumberCountryCode": "+47"
     }
   },
   "PlatformSettings": {
