--- a/src/Altinn.Profile/appsettings.json
+++ b/src/Altinn.Profile/appsettings.json
@@ -48,5 +48,8 @@
   },
   "NotificationsSettings": {
     "ApiNotificationsEndpoint": "http://localhost:5090/notifications/api/"
+  },
+  "ImportJobSettings": {
+    "FavoritesImportEnabled": true
   }
 }
