Add Import job and connected test

--- a/src/Altinn.Profile/appsettings.json
+++ b/src/Altinn.Profile/appsettings.json
@@ -50,6 +50,7 @@
     "ApiNotificationsEndpoint": "http://localhost:5090/notifications/api/"
   },
   "ImportJobSettings": {
-    "FavoritesImportEnabled": true
+    "FavoritesImportEnabled": true,
+    "NotificationSettingsImportEnabled": true
   }
 }
