Feature/500 import job (#509)
* Add client for fetching changelog form A2

* Add unit tests

* Fix nitpicks

* Avoid logging response content

* Add table to get last change timestamp

* Improve formatting

* Add jobs project from register

* Add changelog repository

* Refactor and add import job logic

* Fix test so they run green

* Grant usage on tables

* Add jobs project from register

* Add changelog repository

* Refactor and add import job logic

* Fix test so they run green

* Fix some coderabbit issues

* Some more fixes

* Add telemetry to favorite import job

* Log warning if deserialization fails

* Add test for job

* Add tests

* Change datetime kind

* Change back to utc time

* Exclude packages from register from code coverage

* Fix some issues

* Try to skip register code form analysis

* Move exclusion

* Update exclusions to correct path

* Do not dispose

--- a/src/Altinn.Profile/appsettings.json
+++ b/src/Altinn.Profile/appsettings.json
@@ -4,7 +4,7 @@
     "JwtCookieName": "AltinnStudioRuntime"
   },
   "SblBridgeSettings": {
-    "ApiProfileEndpoint": "https://at23.altinn.cloud/sblbridge/profile/api/",
+    "ApiProfileEndpoint": "https://at22.altinn.cloud/sblbridge/profile/api/",
     "UpdateA2": false
   },
   "CoreSettings": {
@@ -48,5 +48,8 @@
   },
   "NotificationsSettings": {
     "ApiNotificationsEndpoint": "http://localhost:5090/notifications/api/"
+  },
+  "ImportJobSettings": {
+    "FavoritesImportEnabled": true
   }
 }
