Revert "Local changes for testing (DO NOT MERGE THIS)"
This reverts commit 9636395d6656ddcf4906e80b3c7460e3485f5a83.

--- a/src/Altinn.Profile/appsettings.Development.json
+++ b/src/Altinn.Profile/appsettings.Development.json
@@ -10,10 +10,7 @@
     }
   },
   "ImportJobSettings": {
-    "FavoritesImportEnabled": false,
-    "NotificationSettingsImportEnabled": false
-  },
-  "SblBridgeSettings": {
-    "UpdateA2": true
+    "FavoritesImportEnabled": true,
+    "NotificationSettingsImportEnabled": true
   }
 }
