Add import job to program

--- a/src/Altinn.Profile/appsettings.json
+++ b/src/Altinn.Profile/appsettings.json
@@ -52,6 +52,7 @@
   },
   "ImportJobSettings": {
     "FavoritesImportEnabled": false,
-    "NotificationSettingsImportEnabled": false
+    "NotificationSettingsImportEnabled": false,
+    "PortalSettingsImportEnabled": false
   }
 }
