Add profile settings import job

--- a/src/Altinn.Profile/appsettings.json
+++ b/src/Altinn.Profile/appsettings.json
@@ -51,6 +51,7 @@
   },
   "ImportJobSettings": {
     "FavoritesImportEnabled": false,
-    "NotificationSettingsImportEnabled": false
+    "NotificationSettingsImportEnabled": false,
+    "PortalSettingsImportEnabled": false
   }
 }
