Smal fixes to make the code run

--- a/src/Altinn.Profile/appsettings.json
+++ b/src/Altinn.Profile/appsettings.json
@@ -7,7 +7,8 @@
   "SblBridgeSettings": {
     "ApiProfileEndpoint": "https://at22.altinn.cloud/sblbridge/profile/api/",
     "UpdateA2Favorites": false,
-    "UpdateA2NotificationSettings": false
+    "UpdateA2NotificationSettings": false,
+    "UpdateA2ProfileSettings": true
   },
   "CoreSettings": {
     "ProfileCacheLifetimeSeconds": 600
