Outline a check for confirmation of addresses

--- a/src/Altinn.Profile/appsettings.json
+++ b/src/Altinn.Profile/appsettings.json
@@ -54,5 +54,9 @@
     "FavoritesImportEnabled": false,
     "NotificationSettingsImportEnabled": false,
     "ProfileSettingsImportEnabled": false
+  },
+  "AltinnConfiguration": {
+    "IgnoreUnitProfileConfirmationDays": 365,
+    "ValidationReminderDays":  90
   }
 }
