Add client and outbox to update a2 with profile settings (#607)
* Add client and outbox to update a2 with profile settings

* Improve test coverage

* Fix sonarcloud issues

* Fix some coderabbit issues

* Use singleOrDefault as userId is pk

* Smal fixes to make the code run

* Disable default value for update a2 and fix test

--- a/src/Altinn.Profile/appsettings.json
+++ b/src/Altinn.Profile/appsettings.json
@@ -5,9 +5,10 @@
     "LookupUnitContactPointsAtSblBridge":  false
   },
   "SblBridgeSettings": {
-    "ApiProfileEndpoint": "https://at22.altinn.cloud/sblbridge/profile/api/",
+    "ApiProfileEndpoint": "https://at24.altinn.cloud/sblbridge/profile/api/",
     "UpdateA2Favorites": false,
-    "UpdateA2NotificationSettings": false
+    "UpdateA2NotificationSettings": false,
+    "UpdateA2ProfileSettings": true
   },
   "CoreSettings": {
     "ProfileCacheLifetimeSeconds": 600
