Add new patch operation for user profile settings (#606)
* Add ne wpatch oepration for user profile settings

* Fix some comments

* Invalidate cache when updating

* Rename tests to make them more clear

* Rewrite cache to all types use userId

* Fix scan issues

* shorcut get from cache when first not found

* Fix assertion in test

* Add more tests

* Fix coderabbit issues

* Differentiate between api request and update model

* Nitpicks from code rabbit

* Revert changes to bruno test env

--- a/src/Altinn.Profile/appsettings.json
+++ b/src/Altinn.Profile/appsettings.json
@@ -5,10 +5,10 @@
     "LookupUnitContactPointsAtSblBridge":  false
   },
   "SblBridgeSettings": {
-    "ApiProfileEndpoint": "https://at24.altinn.cloud/sblbridge/profile/api/",
+    "ApiProfileEndpoint": "https://at22.altinn.cloud/sblbridge/profile/api/",
     "UpdateA2Favorites": false,
     "UpdateA2NotificationSettings": false,
-    "UpdateA2ProfileSettings": true
+    "UpdateA2ProfileSettings": false
   },
   "CoreSettings": {
     "ProfileCacheLifetimeSeconds": 600
