Fix regex pattern for package matching in renovate.json

--- a/renovate.json
+++ b/renovate.json
@@ -21,7 +21,8 @@
     {
       "matchManagers": ["nuget"],
       "matchUpdateTypes": ["major"],
-      "matchPackagePatterns": ["^([^\\.]+)"]
+      "matchPackagePatterns": ["/^([^\\.]+)/"],
+      "groupName": "Grouped major upgrades: {{depName}}",
     }
   ]
 }
