Switch configname to addressMaintainanceSettings

--- a/src/Altinn.Profile/appsettings.json
+++ b/src/Altinn.Profile/appsettings.json
@@ -2,7 +2,7 @@
   "GeneralSettings": {
     "OpenIdWellKnownEndpoint": "http://localhost:5040/authentication/api/v1/openid/",
     "JwtCookieName": "AltinnStudioRuntime",
-    "LookupUnitContactPointsAtSblBridge":  false
+    "LookupUnitContactPointsAtSblBridge": false
   },
   "SblBridgeSettings": {
     "ApiProfileEndpoint": "https://at22.altinn.cloud/sblbridge/profile/api/",
@@ -56,8 +56,8 @@
     "NotificationSettingsImportEnabled": false,
     "ProfileSettingsImportEnabled": false
   },
-  "AltinnConfiguration": {
+  "AddressMaintainanceSettings": {
     "IgnoreUnitProfileConfirmationDays": 365,
-    "ValidationReminderDays":  90
+    "ValidationReminderDays": 90
   }
 }
