Feature/429 needs confirmation (#613)
* Outline a check for confirmation of addresses

* Make userID unique to avoid caching

* Add a comment

* Use utcNow instead of now

* Fix coderabbit comments

* Refactor confirmation logic to core layer

* Simplyfy loop

* Switch configname to addressMaintainanceSettings

* Fix typo

--- a/src/Altinn.Profile/appsettings.json
+++ b/src/Altinn.Profile/appsettings.json
@@ -2,7 +2,7 @@
   "GeneralSettings": {
     "OpenIdWellKnownEndpoint": "http://localhost:5040/authentication/api/v1/openid/",
     "JwtCookieName": "AltinnStudioRuntime",
-    "LookupUnitContactPointsAtSblBridge":  false
+    "LookupUnitContactPointsAtSblBridge": false
   },
   "SblBridgeSettings": {
     "ApiProfileEndpoint": "https://at22.altinn.cloud/sblbridge/profile/api/",
@@ -55,5 +55,9 @@
     "FavoritesImportEnabled": false,
     "NotificationSettingsImportEnabled": false,
     "ProfileSettingsImportEnabled": false
+  },
+  "AddressMaintenanceSettings": {
+    "IgnoreUnitProfileConfirmationDays": 365,
+    "ValidationReminderDays": 90
   }
 }
