Update team name Project->Core, set empty permission set (the action gets what it needs via the token parameter)

--- a/.github/workflows/assign-issues-to-projects.yml
+++ b/.github/workflows/assign-issues-to-projects.yml
@@ -7,8 +7,9 @@ on:
 
 jobs:
   add-to-project:
-    name: Add issue to Team Platform project
+    name: Add issue to Team Core project
     runs-on: ubuntu-latest
+    permissions: {}
     steps:
       - uses: actions/add-to-project@main
         with:
